[gd_scene load_steps=2 format=3 uid="uid://bqx8v7x8x8x8x"]

[ext_resource type="Script" path="res://Scripts/UI/AbilityLearningWindow.gd" id="1_0x8x8x"]

[node name="AbilityLearningWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x8x8x")

[node name="CloseButtonTop" type="Button" parent="."]
layout_mode = 0
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 50.0
text = "✕"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Изучение способностей врагов"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AbilityList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Закрыть"
custom_minimum_size = Vector2(200, 50)
