# Scripts/UI/AbilityLearningWindow.gd
class_name AbilityLearningWindow
extends Control

@onready var ability_list = $VBoxContainer/ScrollContainer/AbilityList
@onready var close_button = $VBoxContainer/CloseButton
@onready var close_button_top = $CloseButtonTop

var ability_learning_system: Node

func _ready():
	# –ü–æ–ª—É—á–∞–µ–º —Å—Å—ã–ª–∫—É –Ω–∞ —Å–∏—Å—Ç–µ–º—É –∏–∑—É—á–µ–Ω–∏—è —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π
	ability_learning_system = get_node_or_null("/root/AbilityLearningSystem")
	
	# –ï—Å–ª–∏ —Å–∏—Å—Ç–µ–º–∞ –Ω–µ –Ω–∞–π–¥–µ–Ω–∞, —Å–æ–∑–¥–∞–µ–º –µ—ë
	if not ability_learning_system:
		print("AbilityLearningSystem –Ω–µ –Ω–∞–π–¥–µ–Ω, —Å–æ–∑–¥–∞–µ–º —Å–∏—Å—Ç–µ–º—É...")
		var system_script = preload("res://Scripts/Systems/AbilityLearningSystem.gd")
		ability_learning_system = Node.new()
		ability_learning_system.set_script(system_script)
		ability_learning_system.name = "AbilityLearningSystem"
		get_tree().root.add_child(ability_learning_system)
		await get_tree().process_frame
		print("AbilityLearningSystem —Å–æ–∑–¥–∞–Ω –∏ –¥–æ–±–∞–≤–ª–µ–Ω –≤ —Å—Ü–µ–Ω—É")
	
	# –ü–æ–¥–ø–∏—Å—ã–≤–∞–µ–º—Å—è –Ω–∞ —Å–æ–±—ã—Ç–∏—è –∏–∑—É—á–µ–Ω–∏—è
	ability_learning_system.ability_learned.connect(_on_ability_learned)
	ability_learning_system.progress_updated.connect(_on_progress_updated)
	
	# –ù–∞—Å—Ç—Ä–∞–∏–≤–∞–µ–º –∫–Ω–æ–ø–∫–∏ –∑–∞–∫—Ä—ã—Ç–∏—è
	close_button.pressed.connect(_on_close_button_pressed)
	close_button_top.pressed.connect(_on_close_button_pressed)
	
	# –ó–∞–≥—Ä—É–∂–∞–µ–º —Å–ø–∏—Å–æ–∫ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π
	_load_ability_list()
	
	# –î–µ–ª–∞–µ–º –æ–∫–Ω–æ –º–æ–¥–∞–ª—å–Ω—ã–º –∏ —É—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º —Ñ–æ–∫—É—Å
	set_process_unhandled_key_input(true)

func _unhandled_key_input(event):
	"""–û–±—Ä–∞–±–æ—Ç–∫–∞ –Ω–∞–∂–∞—Ç–∏–π –∫–ª–∞–≤–∏—à"""
	if event.pressed and event.keycode == KEY_ESCAPE:
		_on_close_button_pressed()

func _load_ability_list():
	"""–ó–∞–≥—Ä—É–∂–∞–µ—Ç —Å–ø–∏—Å–æ–∫ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π –¥–ª—è –∏–∑—É—á–µ–Ω–∏—è"""
	# –û—á–∏—â–∞–µ–º —Å–ø–∏—Å–æ–∫
	for child in ability_list.get_children():
		child.queue_free()
	
	# –ü–æ–ª—É—á–∞–µ–º –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—é —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π
	var config = ability_learning_system.ability_learning_config
	
	for ability_id in config:
		var ability_config = config[ability_id]
		_create_ability_item(ability_id, ability_config)

func _create_ability_item(ability_id: String, ability_config: Dictionary):
	"""–°–æ–∑–¥–∞–µ—Ç —ç–ª–µ–º–µ–Ω—Ç —Å–ø–∏—Å–∫–∞ –¥–ª—è —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏"""
	var item = HBoxContainer.new()
	ability_list.add_child(item)
	
	# –ù–∞–∑–≤–∞–Ω–∏–µ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏
	var name_label = Label.new()
	name_label.text = ability_config.name
	name_label.custom_minimum_size.x = 200
	item.add_child(name_label)
	
	# –ü—Ä–æ–≥—Ä–µ—Å—Å –∏–∑—É—á–µ–Ω–∏—è
	var progress = ability_learning_system.get_ability_progress(ability_id)
	var progress_label = Label.new()
	progress_label.text = str(int(progress.current_progress)) + "/" + str(int(ability_config.required_progress)) + "%"
	progress_label.custom_minimum_size.x = 100
	item.add_child(progress_label)
	
	# –ü—Ä–æ–≥—Ä–µ—Å—Å-–±–∞—Ä
	var progress_bar = ProgressBar.new()
	progress_bar.min_value = 0
	progress_bar.max_value = ability_config.required_progress
	progress_bar.value = progress.current_progress
	progress_bar.custom_minimum_size.x = 200
	item.add_child(progress_bar)
	
	# –°—Ç–∞—Ç—É—Å –∏–∑—É—á–µ–Ω–∏—è
	var status_label = Label.new()
	if progress.is_learned:
		status_label.text = "‚úÖ –ò–∑—É—á–µ–Ω–∞"
		status_label.modulate = Color.GREEN
	else:
		status_label.text = "‚ùå –ù–µ –∏–∑—É—á–µ–Ω–∞"
		status_label.modulate = Color.RED
	item.add_child(status_label)
	
	# –ö–Ω–æ–ø–∫–∞ –∏–∑—É—á–µ–Ω–∏—è (–µ—Å–ª–∏ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç—å –∏–∑—É—á–µ–Ω–∞ –∏ –µ—â–µ –Ω–µ –¥–æ–±–∞–≤–ª–µ–Ω–∞ –≤ –ø–∞—Å—Å–∏–≤–Ω—ã–µ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏ –∏–≥—Ä–æ–∫–∞)
	if progress.is_learned:
		# –ü—Ä–æ–≤–µ—Ä—è–µ–º, –Ω–µ –¥–æ–±–∞–≤–ª–µ–Ω–∞ –ª–∏ —É–∂–µ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç—å –≤ –ø–∞—Å—Å–∏–≤–Ω—ã–µ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏ –∏–≥—Ä–æ–∫–∞
		var player_manager = get_node_or_null("/root/PlayerManager")
		var already_learned = false
		
		if player_manager:
			var player_data = player_manager.get_player_data()
			if player_data:
				var learned_passives = player_data.get_learned_passives()
				var ability_mapping = {
					"rat_vitality": "player_rat_vitality",
					"dodge": "dodge",
					"blood_flow": "blood_flow",
					"agility": "player_agility",
					"cornered": "player_cornered"
				}
				var player_ability_id = ability_mapping.get(ability_id)
				if player_ability_id and player_ability_id in learned_passives:
					already_learned = true
		
		if not already_learned:
			var learn_button = Button.new()
			learn_button.text = "–ò–∑—É—á–∏—Ç—å"
			learn_button.custom_minimum_size.x = 80
			learn_button.add_theme_color_override("font_color", Color.CYAN)
			learn_button.pressed.connect(_on_learn_ability_button_pressed.bind(ability_id))
			item.add_child(learn_button)
		else:
			# –ü–æ–∫–∞–∑—ã–≤–∞–µ–º —Å—Ç–∞—Ç—É—Å "–£–∂–µ –∏–∑—É—á–µ–Ω–∞"
			var menu_status_label = Label.new()
			menu_status_label.text = "‚úÖ –í –º–µ–Ω—é"
			menu_status_label.add_theme_color_override("font_color", Color.GREEN)
			menu_status_label.custom_minimum_size.x = 80
			item.add_child(menu_status_label)
	
	# –ö–Ω–æ–ø–∫–∞ –¥–µ—Ç–∞–ª–µ–π
	var details_button = Button.new()
	details_button.text = "–î–µ—Ç–∞–ª–∏"
	details_button.pressed.connect(_on_details_button_pressed.bind(ability_id))
	item.add_child(details_button)

func _on_ability_learned(ability_id: String, _progress: int):
	"""–û–±—Ä–∞–±–æ—Ç–∫–∞ –∏–∑—É—á–µ–Ω–∏—è –Ω–æ–≤–æ–π —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏"""
	var ability_name = ability_learning_system.ability_learning_config[ability_id].name
	_show_notification("üéâ –ò–∑—É—á–µ–Ω–∞ –Ω–æ–≤–∞—è —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç—å: " + ability_name)
	
	# –û–±–Ω–æ–≤–ª—è–µ–º —Å–ø–∏—Å–æ–∫
	_load_ability_list()

func _on_progress_updated(_ability_id: String, _progress: int):
	"""–û–±–Ω–æ–≤–ª–µ–Ω–∏–µ –ø—Ä–æ–≥—Ä–µ—Å—Å–∞ –∏–∑—É—á–µ–Ω–∏—è"""
	# –û–±–Ω–æ–≤–ª—è–µ–º —Å–ø–∏—Å–æ–∫ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π
	_load_ability_list()

func _on_details_button_pressed(ability_id: String):
	"""–ü–æ–∫–∞–∑—ã–≤–∞–µ—Ç –¥–µ—Ç–∞–ª–∏ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏"""
	var ability_config = ability_learning_system.ability_learning_config[ability_id]
	var progress = ability_learning_system.get_ability_progress(ability_id)
	
	var details_text = "=== –î–ï–¢–ê–õ–ò –°–ü–û–°–û–ë–ù–û–°–¢–ò ===\n"
	details_text += "–ù–∞–∑–≤–∞–Ω–∏–µ: " + ability_config.name + "\n"
	details_text += "–ü—Ä–æ–≥—Ä–µ—Å—Å: " + str(int(progress.current_progress)) + "/" + str(int(ability_config.required_progress)) + "%\n"
	details_text += "–°—Ç–∞—Ç—É—Å: " + ("–ò–∑—É—á–µ–Ω–∞" if progress.is_learned else "–ù–µ –∏–∑—É—á–µ–Ω–∞") + "\n"
	
	if progress.is_learned:
		details_text += "–ò–∑—É—á–µ–Ω–∞: " + str(progress.learned_at) + "\n"
	
	details_text += "\n–ò—Å—Ç–æ—á–Ω–∏–∫–∏ –ø—Ä–æ–≥—Ä–µ—Å—Å–∞:\n"
	for source in ability_config.sources:
		details_text += "  - " + source + ": " + str(ability_config.sources[source]) + "%\n"
	
	_show_details_dialog(details_text)

func _show_details_dialog(text: String):
	"""–ü–æ–∫–∞–∑—ã–≤–∞–µ—Ç –¥–∏–∞–ª–æ–≥ —Å –¥–µ—Ç–∞–ª—è–º–∏"""
	var dialog = AcceptDialog.new()
	dialog.title = "–î–µ—Ç–∞–ª–∏ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏"
	dialog.dialog_text = text
	dialog.size = Vector2(400, 300)
	add_child(dialog)
	dialog.popup_centered()
	
	# –ê–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏ –∑–∞–∫—Ä—ã–≤–∞–µ–º –¥–∏–∞–ª–æ–≥ —á–µ—Ä–µ–∑ 5 —Å–µ–∫—É–Ω–¥
	await get_tree().create_timer(5.0).timeout
	if dialog and is_instance_valid(dialog):
		dialog.queue_free()

func _show_notification(text: String):
	"""–ü–æ–∫–∞–∑—ã–≤–∞–µ—Ç —É–≤–µ–¥–æ–º–ª–µ–Ω–∏–µ"""
	var notification_label = Label.new()
	notification_label.text = text
	notification_label.add_theme_color_override("font_color", Color.YELLOW)
	notification_label.add_theme_font_size_override("font_size", 16)
	notification_label.position = Vector2(50, 50)
	add_child(notification_label)
	
	# –ê–Ω–∏–º–∞—Ü–∏—è –ø–æ—è–≤–ª–µ–Ω–∏—è
	var tween = create_tween()
	tween.tween_property(notification_label, "modulate:a", 1.0, 0.5)
	tween.tween_interval(2.0)  # –ò—Å–ø–æ–ª—å–∑—É–µ–º tween_interval –≤–º–µ—Å—Ç–æ tween_delay
	tween.tween_property(notification_label, "modulate:a", 0.0, 0.5)
	tween.tween_callback(notification_label.queue_free)

func _on_learn_ability_button_pressed(ability_id: String):
	"""–û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –∏–∑—É—á–µ–Ω–∏–µ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏ –∏–≥—Ä–æ–∫–æ–º"""
	# –ü–æ–ª—É—á–∞–µ–º –º–µ–Ω–µ–¥–∂–µ—Ä –∏–≥—Ä–æ–∫–∞
	var player_manager = get_node_or_null("/root/PlayerManager")
	if not player_manager:
		_show_notification("‚ùå –û—à–∏–±–∫–∞: PlayerManager –Ω–µ –Ω–∞–π–¥–µ–Ω!")
		return
	
	var player_data = player_manager.get_player_data()
	if not player_data:
		_show_notification("‚ùå –û—à–∏–±–∫–∞: –î–∞–Ω–Ω—ã–µ –∏–≥—Ä–æ–∫–∞ –Ω–µ –Ω–∞–π–¥–µ–Ω—ã!")
		return
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º, —á—Ç–æ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç—å –¥–µ–π—Å—Ç–≤–∏—Ç–µ–ª—å–Ω–æ –∏–∑—É—á–µ–Ω–∞
	if not ability_learning_system.is_ability_learned(ability_id):
		_show_notification("‚ùå –°–ø–æ—Å–æ–±–Ω–æ—Å—Ç—å –µ—â–µ –Ω–µ –∏–∑—É—á–µ–Ω–∞!")
		return
	
	# –î–æ–±–∞–≤–ª—è–µ–º —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç—å –≤ –∏–∑—É—á–µ–Ω–Ω—ã–µ –ø–∞—Å—Å–∏–≤–Ω—ã–µ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏ –∏–≥—Ä–æ–∫–∞
	var success = _add_learned_ability_to_player(ability_id, player_data)
	
	if success:
		_show_notification("‚úÖ –°–ø–æ—Å–æ–±–Ω–æ—Å—Ç—å –¥–æ–±–∞–≤–ª–µ–Ω–∞ –≤ –º–µ–Ω—é –ø–∞—Å—Å–∏–≤–Ω—ã—Ö —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π!")
		_load_ability_list()
		_refresh_passive_abilities_window()
		
		# –°–æ—Ö—Ä–∞–Ω—è–µ–º –¥–∞–Ω–Ω—ã–µ –∏–≥—Ä–æ–∫–∞ –ø–æ—Å–ª–µ –∏–∑—É—á–µ–Ω–∏—è —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏
		if player_manager:
			player_manager.save_game_data()
	else:
		_show_notification("‚ùå –û—à–∏–±–∫–∞ –ø—Ä–∏ –¥–æ–±–∞–≤–ª–µ–Ω–∏–∏ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏!")

func _add_learned_ability_to_player(ability_id: String, player_data) -> bool:
	"""–î–æ–±–∞–≤–ª—è–µ—Ç –∏–∑—É—á–µ–Ω–Ω—É—é —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç—å –≤ —Å–∏—Å—Ç–µ–º—É –ø–∞—Å—Å–∏–≤–Ω—ã—Ö —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π –∏–≥—Ä–æ–∫–∞"""
	# –ú–∞–ø–ø–∏–Ω–≥ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π –≤—Ä–∞–≥–æ–≤ –Ω–∞ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏ –∏–≥—Ä–æ–∫–∞
	var ability_mapping = {
		"rat_vitality": "player_rat_vitality",      # –ö—Ä—ã—Å–∏–Ω–∞—è –∂–∏–≤—É—á–µ—Å—Ç—å -> –ö—Ä—ã—Å–∏–Ω–∞—è –∂–∏–≤—É—á–µ—Å—Ç—å –∏–≥—Ä–æ–∫–∞
		"dodge": "dodge",                           # –£–≤–æ—Ä–æ—Ç -> –£–≤–æ—Ä–æ—Ç (–æ—Ä–∏–≥–∏–Ω–∞–ª—å–Ω–∞—è —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç—å)
		"blood_flow": "blood_flow",                 # –ö—Ä–æ–≤–æ—Ç–æ–∫ -> –ö—Ä–æ–≤–æ—Ç–æ–∫ (–æ—Ä–∏–≥–∏–Ω–∞–ª—å–Ω–∞—è —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç—å)
		"agility": "player_agility",                # –ò–∑–≤–æ—Ä–æ—Ç–ª–∏–≤–æ—Å—Ç—å -> –ò–∑–≤–æ—Ä–æ—Ç–ª–∏–≤–æ—Å—Ç—å –∏–≥—Ä–æ–∫–∞
		"cornered": "player_cornered"               # –ó–∞–≥–Ω–∞–Ω–Ω—ã–π –≤ —É–≥–æ–ª -> –ó–∞–≥–Ω–∞–Ω–Ω—ã–π –≤ —É–≥–æ–ª –∏–≥—Ä–æ–∫–∞
	}
	
	# –ü–æ–ª—É—á–∞–µ–º —Å–æ–æ—Ç–≤–µ—Ç—Å—Ç–≤—É—é—â—É—é —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç—å –∏–≥—Ä–æ–∫–∞
	var player_ability_id = ability_mapping.get(ability_id)
	
	if not player_ability_id:
		return false
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º, –Ω–µ –∏–∑—É—á–µ–Ω–∞ –ª–∏ —É–∂–µ —ç—Ç–∞ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç—å
	var learned_passives = player_data.get_learned_passives()
	
	if player_ability_id in learned_passives:
		_show_notification("‚ÑπÔ∏è –°–ø–æ—Å–æ–±–Ω–æ—Å—Ç—å —É–∂–µ –¥–æ–±–∞–≤–ª–µ–Ω–∞ –≤ –º–µ–Ω—é –ø–∞—Å—Å–∏–≤–Ω—ã—Ö —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π!")
		return false
	
	# –ò–∑—É—á–∞–µ–º —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç—å
	var _learn_result = player_data.learn_passive_ability(player_ability_id)
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º, —á—Ç–æ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç—å –¥–µ–π—Å—Ç–≤–∏—Ç–µ–ª—å–Ω–æ –¥–æ–±–∞–≤–ª–µ–Ω–∞
	var updated_learned_passives = player_data.get_learned_passives()
	
	return player_ability_id in updated_learned_passives

func _refresh_passive_abilities_window():
	"""–û–±–Ω–æ–≤–ª—è–µ—Ç –æ–∫–Ω–æ –ø–∞—Å—Å–∏–≤–Ω—ã—Ö —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π, –µ—Å–ª–∏ –æ–Ω–æ –æ—Ç–∫—Ä—ã—Ç–æ"""
	var passive_window = get_node_or_null("/root/CharacterPreparation/PassiveAbilitiesWindow")
	if passive_window and passive_window.has_method("update_ui"):
		passive_window.update_ui()

func _on_close_button_pressed():
	"""–ó–∞–∫—Ä—ã–≤–∞–µ—Ç –æ–∫–Ω–æ –∏–∑—É—á–µ–Ω–∏—è —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π"""
	queue_free()
